@@ -1,3 +1,12 @@
+2015-12-06  Valentin Hilbig  <tino@medusa.03.softkill.org>
+
+	* data.h: changed "user" parameter to tino_data_user and added
+	tino_data_user_NULL() and similar converter functions.
+
+	* proc.h (tino_daemonize_pidOb): suppress waning with IGUR
+
+	* debug.h (IGUR): added dummy to ignore things
+
 2015-11-28  Valentin Hilbig  <tino@medusa.03.softkill.org>
 
 	* sysfix_osx.h (TINO_NO_O_DIRECT): added
